@@ -30,6 +30,7 @@ Released: not released yet
 - added new functions systemctl_reload(), systemctl_restart()
 - added new functions remove_file(), remove_directory(), create_directory()
 - added new functions systemctl_get_default(), systemctl_set_default()
+- added new functions localectl_set_locale(), timedatectl_set_timezone()
 
 
 Version 0.1
